--- a/index.css
+++ b/index.css
@@ -5,31 +5,48 @@ html, body {
 
 body {
      /* uigradients.com */
-    background: #bdc3c7;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
-    background-repeat: no-repeat;
+    background-color: white;
     height: 100vh;
+    font-family: "Oxygen", sans-serif;
+    color: white;
+}
+
+.activity-container {
+    background-color: #0c4842;
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: "Oxygen", sans-serif;
+    max-width: 400px;
+    height: 400px;
+    margin: auto;
+    margin-top: 10em;
+}
+
+h1 {
+    margin-top: 2em;
+    font-weight: bold;
+}
+
+h4 {
+    padding: none;
 }
 
 button {
     height: 100px;
     width: 100px;
     border-radius: 50%;
-    background-color: red;
-    border: 1px solid darkred;
+    background-color: #405b55;
+    border: 1px solid #08272e;
     cursor: pointer;
     outline: none;
+    margin-top: 1em;
 }
 
+button:hover {
+    background-color: #245359;
+}
+
+
 .fun {
-        /* CSS generated from https://uigradients.com */
-    background: #fc4a1a;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #f7b733, #fc4a1a);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #f7b733, #fc4a1a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-color: 376b6d;
 }
